--- a/.github/workflows/gerby.yml
+++ b/.github/workflows/gerby.yml
@@ -21,7 +21,8 @@ jobs:
           make gerby
       - name: Run Gerby
         uses: xu-cheng/texlive-action/full@v1
-        run: |
-          cd gerby
-          plastex --renderer=Gerby book.tex
+        with:
+          run: |
+            cd gerby
+            plastex --renderer=Gerby book.tex
 
